--- a/templates/historial/formulario-clientes.html
+++ b/templates/historial/formulario-clientes.html
@@ -53,7 +53,7 @@
                     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
                         <script src="/static/scripts/sweetAlert.js"></script>
                         <div class="alertE" role="alert">
-                        <h4 id="mensajeE">Error! {% for i in form.errors %} {{i}} {% endfor %}</h4> 
+                        <img id="alet" src="/static/assets/alert.png"> <h4 id="mensajeE">Error! {% for i in form.errors %} {{i}} {% endfor %}</h4> 
                       </div>
                     {% endif %}
 
