--- a/static/styles/Administrador/form_admin.css
+++ b/static/styles/Administrador/form_admin.css
@@ -201,21 +201,45 @@ select{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
-.alertE{
-    position: absolute;
-    width: 205px;
+.alertA{
+    position: relative;
+    width: 375px;
     height: 36px;
-    vertical-align:middle;
+    vertical-align: middle;
     border-radius: 10px;
-    top: 700px;
-    left: 319px;
-    background: rgba(209, 18, 18, 0.58);
+    top: -54px;
+    left: 659px;
+    background: #f5c2c7;
+}
+
+.alertE{
+    position: relative;
+    width: 375px;
+    height: 36px;
+    vertical-align: middle;
+    border-radius: 10px;
+    top: -50px;
+    left: 659px;
+    background: #f5c2c7;
+}
+#alet{
+    position: relative;
+    top: -1px;
+    left: 325px;
+    width: 40px;
+    height: 40px;
 }
 #mensajeE{
-    position: absolute;
-    top: 8px;
+    position: relative;
+    top: -31px;
     left: 11px;
 }
+#mensajeA{
+    position: relative;
+    top: -26px;
+    left: 11px;
+}
+
 
 .Ventanae{
     top: 230px;
@@ -244,4 +268,25 @@ select{
     font-family: 'Poppins', sans-serif;
     background-color: #553CFB;
     color: aliceblue;
+}
+.alert1{
+    position: relative;
+    width: 375px;
+    height: 36px;
+    vertical-align: middle;
+    border-radius: 10px;
+    top: -169px;
+    left: 659px;
+    background: #f5c2c7;
+}
+
+.alert3{
+    position: relative;
+    width: 375px;
+    height: 36px;
+    vertical-align: middle;
+    border-radius: 10px;
+    top: -169px;
+    left: 659px;
+    background: #f5c2c7;
 }
