--- a/templates/administrador/admin_vendedor.html
+++ b/templates/administrador/admin_vendedor.html
@@ -72,18 +72,18 @@
                                     </div>
 
                                     {% if form.non_field_errors %}
-                                    <div class="alert">
-                                    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-                                    {{ form.non_field_errors }}
+                                    <div class="alertA">
+                                        <img id="alet" src="/static/assets/alert.png"><h4 id="mensajeA">{{ form.non_field_errors }}</h4>
+                                    
                                     </div>
                                     {% endif %}
                                     
-                                    {% for i in form.errors %} {{i}} {% endfor %} 
+                                    
                                     {% if form.errors %}
                             <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
                             <script src="/static/scripts/sweetAlert.js"></script>
                             <div class="alertE" role="alert">
-                            <h4 id="mensajeE">Error! {% for i in form.errors %} {{i}} {% endfor %}</h4> 
+                                <img id="alet" src="/static/assets/alert.png"><h4 id="mensajeE">Error! {% for i in form.errors %} {{i}} {% endfor %}</h4> 
                           </div>
                           
                         {% endif %}
