--- a/templates/historial/formulario-mascota.html
+++ b/templates/historial/formulario-mascota.html
@@ -83,6 +83,7 @@
         </div>
 </body>
 <script src="{% static 'scripts/formulariosVenta.js' %}"></script>
+<script src="{% static 'scripts/formulariosadmin.js' %}"></script>
 {% endblock content %}
 
 
