--- a/static/styles/myCart.css
+++ b/static/styles/myCart.css
@@ -63,19 +63,18 @@ tr .total1{
     top: 30%;
     border-width: 0px;
     border-top: 0px;
+    left: -220px;
 } 
 tr .total{
-    margin: 10px;
     font-size: 17px;
     position: relative;
-    left: 290.6%;
+    left: 229.6%;
 }
 tr .carroTotal{
-    margin: 10px;
     font-size: 17px;
     position: relative;
     top: -32.5%;
-    left: 450.9%;
+    left: 328.9%;
 }
 tr .vaciarCarro{
     position: relative;
@@ -96,7 +95,7 @@ tr .vaciarCarro{
     border: 0px;
 }
 td .generarFac{
-    width: 160%;
+    width: 200%;
     padding: 8px;
     border-radius: 5px;
     font-style: normal;
