--- a/templates/ventas/mycart.html
+++ b/templates/ventas/mycart.html
@@ -33,14 +33,17 @@
                     </td>
                 </tr>
                 {% endfor %}
-                <td class="total1">
-                    <p class="total">Total</p>
-                    <p class="carroTotal">{{ carro.total }}</p>
+                <tr>
+
+                    <td class="total1">
+                        <p class="total">Total:</p>
+                        <p class="carroTotal">{{ carro.total }}</p>
+                        {% if carro.productocarro_set.all %}
+                        <p class="vaciarCarro"><a href="{% url 'ventas_app:VaciarCarro' %}">Vaciar Carro</a></p>
+                        {% endif %}
+                    </td>
+                </tr>
                     {% if carro.productocarro_set.all %}
-                    <p class="vaciarCarro"><a href="{% url 'ventas_app:VaciarCarro' %}">Vaciar Carro</a></p>
-                    {% endif %}
-                </td>
-                {% if carro.productocarro_set.all %}
                 <td class="generar">
                     <p class="generarFac"><a href="{% url 'ventas_app:Facturacion' %}">Generar Factura</a></p>
                 </td>
