--- a/templates/ventas/ventas.html
+++ b/templates/ventas/ventas.html
@@ -8,6 +8,7 @@
     <section class="header">
       <h2 class="ventas">Inventario</h2>
        <nav class="btn">
+          <a class="agregar" href="{% url 'ventas_app:MiCarro' %}"><i class="fa-solid fa-cart-arrow-down"></i>Carro</a>
           <a class="agregar" href="{% url 'ventas_app:formulario' %}"><i class="fa-solid fa-plus"></i>Agregar</a>
         </nav>
     </section>
