--- a/templates/historial/historial.html
+++ b/templates/historial/historial.html
@@ -22,6 +22,7 @@
           <th>Peso</th>
           <th>Temperatura</th>
           <th>Frecuencia Cardiaca</th>
+          <th>Accion</th>
         </tr>
       </thead>
       <tbody>
@@ -36,6 +37,9 @@
           <td>{{ h.peso|truncatechars:10 }}</td>
           <td>{{ h.temperatura|truncatechars:10 }}</td>
           <td>{{ h.frecuencia_cardiaca|truncatechars:10 }}</td>
+          <td>
+            <a href="{% url 'veterinaria_app:detailView' h.id %}">Ver</a>
+          </td>
         </tr>
         {% endfor %}
       </tbody>
@@ -49,19 +53,19 @@
     
     {% if is_paginated %}
     {% if page_obj.has_previous %}
-    <a href="?page={{ page_obj.previous_page_number }}">&laquo;</a>  
+    <a href="?page={{ page_obj.previous_page_number }}"><b>&laquo;</b></a>  
     {% endif %}
     
     {% for pagina in paginator.page_range %}
     {% if pagina == page_obj.number  %}
-    <a class="active" href="?page={{ pagina }}">{{ pagina }}</a>
+    <a class="active" href="?page={{ pagina }}"><b>{{ pagina }}</b></a>
     {% else %}
-    <a href="?page={{ pagina }}">{{ pagina }}</a> 
+    <a href="?page={{ pagina }}"><b>{{ pagina }}</b></a> 
     {% endif %}
     {% endfor %}
     
     {% if page_obj.has_next %}
-    <a href="?page={{ page_obj.next_page_number }}">&raquo;</a>   
+    <a href="?page={{ page_obj.next_page_number }}"><b>&raquo;</b></a>   
     {% endif %}
     
     {% endif %}
