--- a/static/styles/Administrador/reporteRangoFechas.css
+++ b/static/styles/Administrador/reporteRangoFechas.css
@@ -38,7 +38,42 @@ button{
     color: aliceblue;
     border: 0px;
     margin-left: 35%;
-    position: absolute;
-    top: 19em;
-    left: 6em;
+    position: relative;
+    top: 9em;
+    left: 2em;
 }
+
+table{
+    border-collapse: collapse;
+    width: 400px;
+    position: relative;
+    top: 12em;
+    text-align: center;
+}
+th{
+    border: 2px solid black;
+    border-left: 0px;
+    border-right: 0px;
+}
+td
+{
+    border: 1px solid #A2ABC2;
+    border-left: 0px;
+    border-right: 0px;
+}
+/* .encabezadoFec{
+    font-weight: bold;
+    width: 100%;
+}
+
+.tituloFecha{
+    font-weight: bold;
+}
+
+li{
+    display: flex;
+}
+.rangoFechas{
+    position: relative;
+    top: 50%;
+} */
