--- a/templates/ventas/reporteRangoFechas.html
+++ b/templates/ventas/reporteRangoFechas.html
@@ -22,12 +22,33 @@
         <button type="submit">Consultar</button>
     </form>
 </p>
+<div class="encabezadoFec">
 
-<ul>
+</div>
+<table>
+    <thead>
+    <tr> 
+        <th class="veterinarioT">Comprador</th>
+        <th class="fechaT">fecha</th>
+    </tr>
+    </thead>
+    <tbody>
+        {% for f in fechas %}
+    <tr>
+        
+        <td> {{ f.pedido_por }} </td>
+        <td> {{ f.creado_el }} </td>
+        
+    </tr>
+        {% endfor %}
+    </tbody>
+</table>
+<!-- <ul class="rangoFechas">
     {% for f in fechas %}
-      <li>{{ f.pedido_por }} - {{ f.creado_el }}</li>
+      <li> <p class="tituloFecha">  Comprador: </p> {{ f.pedido_por }} </li>    
+      <li> <p class="tituloFecha">  Fecha: </p>   {{ f.creado_el }}</li>
     {% endfor %}
-</ul>
+</ul> -->
 
 {% endblock content %}
 
