--- a/templates/historial/historial.html
+++ b/templates/historial/historial.html
@@ -11,6 +11,15 @@
           <a class="agregar" href="{% url 'veterinaria_app:formulario-historial' %}"><i class="fa-solid fa-plus"></i>Agregar</a>
         </nav>
     </section>
+    <form method="get">
+      <div class="buscar">
+          {% csrf_token %}
+          <input type="text" name="kword" class="t" id="kword" placeholder="Ingrese el nombre">
+          <button class="lupa" type="submit"><img src="/static/assets/lupa.png"></button> 
+        </div>
+      </form>
+      <br>
+      <br>
      <table>
       <thead>
 
@@ -41,6 +50,12 @@
             <a href="{% url 'veterinaria_app:detailView' h.id %}">Ver</a>
           </td>
         </tr>
+
+        {% empty %}
+                <div class="alert">
+                  <span span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                  No se han encontrado resultados.
+                </div>
         {% endfor %}
       </tbody>
        </table>
