--- a/templates/ventas/agregarCarro.html
+++ b/templates/ventas/agregarCarro.html
@@ -3,8 +3,5 @@
 {% block title %}Carro
 {% endblock title %}
 {% block content %}
-<div class="container">
-    <h3>Procuto agregado al carro</h3>
-</div>
-
+    <h1>Producto agregado al carro</h1>
 {% endblock content %}
