--- a/static/styles/historial.css
+++ b/static/styles/historial.css
@@ -99,7 +99,24 @@ td,th{
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
+.buscar{
+    position: absolute;
+    padding: 5px; 
+    height: 60px;
+}
+.t{
+    height: 26px;
+    border-style: solid;
+    border-width: 1px;
+    padding-left: 0.5rem;
+}
+.lupa{
+    width: 17%;
+    position: absolute;
+    top: 1px;
+    right: -28px;
+    cursor: pointer;
+}
 
 .imagen{
     border-radius: 20px;
@@ -135,3 +152,25 @@ td,th{
     background-color: #7380ec;
     color: white;
 }
+
+/* The alert message box */
+.alert {
+    padding: 20px;
+    background-color: #7380ec;
+    color: white;
+    margin-bottom: 10px;
+    font-size: 15px;
+  }
+  
+  /* The close button */
+  .closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+
