--- a/templates/historial/formulario-clientes.html
+++ b/templates/historial/formulario-clientes.html
@@ -8,6 +8,15 @@
             <div class="formulario">
                 <form method="post">
                     <h2 class="titulo">Registrar Cliente/Responsable</h2><br>
+                    
+                    {% if messages %}
+                    <div class="mensaje_exitoso">
+                        {% for m in messages %}
+                        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ m }}</li>
+                        {% endfor %}
+                    </div>
+                    {% endif %}
+
                     {% csrf_token %} 
 
                     <div id="formularioClienteResponsable">
@@ -58,13 +67,6 @@
                     {% endif %}
                     <button type="submit" class="btn">Guardar</button>
 
-                    {% if success %}
-                    <div class="Ventanae" id="elimi">                           
-                        <h1>El registro fue un éxito!</h1>
-                          <br>
-                          <button id="Confirmar" onclick="cerrar()">Cerrar</button>
-                    </div>  
-                    {% endif %}
                     
                 </form>
             </div>
@@ -75,7 +77,6 @@
         </div>
 </body>
 <script src="{% static 'scripts/formulariosVenta.js' %}"></script>
-<script src="{% static 'scripts/formulariosadmin.js' %}"></script>
 {% endblock content %}
 
 
