--- a/templates/ventas/formulario.html
+++ b/templates/ventas/formulario.html
@@ -10,6 +10,14 @@
         <h2 class="titulo">Registra tu Producto </h2>
         {% csrf_token %}
 
+        {% if messages %}
+        <div class="mensaje_exitoso">
+            {% for m in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ m }}</li>
+            {% endfor %}
+        </div>
+        {% endif %}
+
         <div id="formularioVentas">
 
           <div class="campo">
@@ -56,12 +64,6 @@
 
         <button type="submit" class="btn">Guardar</button>
 
-        <div class="Ventanae" id="elimi">
-          <form action="" method="post">
-            <h1>El registro fue modificado con éxito! </h1>
-              <button type="submit" id="Confirmar">Confirmar</button>
-            </form>
-        </div>
       </form>
     </div>
     <div class="imagen-content">
