--- a/static/styles/formulario-historial.css
+++ b/static/styles/formulario-historial.css
@@ -54,6 +54,19 @@ h3{
     margin-top: 10px;
 }
 
+.campo1 select{
+    margin-top: 0;
+    margin-left: 0;
+    display: inline-block;
+}
+
+.campo2 select{
+    margin-top: 0;
+    margin-left: 0;
+    display: inline-block;
+}
+
+
 
 .campo2 {
     width: 45%;
