--- a/static/styles/historial.css
+++ b/static/styles/historial.css
@@ -113,6 +113,11 @@ td,th{
 .pagination {
     display: inline-block;
   }
+
+.center {
+    text-align: center;
+}
+
   
   .pagination a {
     color: black;
