--- a/static/styles/Administrador/form_admin.css
+++ b/static/styles/Administrador/form_admin.css
@@ -179,6 +179,16 @@ select{
 }
 
 
+.mensaje_exitoso{
+    background-color: #D1E7DD;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    max-width: 30%;
+    padding: 20px;
+}
+
+
 /* ---------------Boton Registrar---------- */
 .boton
 {
