--- a/templates/historial/formulario-clientes.html
+++ b/templates/historial/formulario-clientes.html
@@ -61,11 +61,16 @@
                     {% if form.errors %}
                     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
                         <script src="/static/scripts/sweetAlert.js"></script>
-                        <div class="alertE" role="alert">
-                        <img id="alet" src="/static/assets/alert.png"> <h4 id="mensajeE">Error! {% for i in form.errors %} {{i}} {% endfor %}</h4> 
-                      </div>
                     {% endif %}
                     <button type="submit" class="btn">Guardar</button>
+
+                    {% if form.non_field_errors %}
+                    <div class="alertE" role="alert">
+                    <img id="alet" src="/static/assets/alert.png"><h4 id="mensajeE">{{ form.non_field_errors }}</h4>
+                    
+                    
+                    </div>
+                    {% endif %}
 
                     
                 </form>
