--- a/templates/historial/historial.html
+++ b/templates/historial/historial.html
@@ -14,7 +14,7 @@
     <form method="get">
       <div class="buscar">
           {% csrf_token %}
-          <input type="text" name="kword" class="t" id="kword" placeholder="Ingrese el nombre">
+          <input type="text" name="kword" class="t" id="kword" placeholder="Ingrese la cedula">
           <button class="lupa" type="submit"><img src="/static/assets/lupa.png"></button> 
         </div>
       </form>
