--- a/templates/administrador/admin_veterinario.html
+++ b/templates/administrador/admin_veterinario.html
@@ -87,10 +87,13 @@
                         {% if form.errors %}
                         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
                         <script src="/static/scripts/sweetAlert.js"></script>
-                        <div class="alertE" role="alert">
-                        <img id="alet" src="/static/assets/alert.png"><h4 id="mensajeE">Error! {% for i in form.errors %} {{i}} {% endfor %}</h4> 
-                      </div>
-                          
+                        {% endif %}
+
+                        {% if form.non_field_errors %}
+                        <div class="alertA">
+                            <img id="alet" src="/static/assets/alert.png"><h4 id="mensajeA">{{ form.non_field_errors }}</h4>
+                        
+                        </div>
                         {% endif %}
                 </div>  
                 <div class="c2">
