--- a/templates/ventas/update.html
+++ b/templates/ventas/update.html
@@ -51,6 +51,14 @@
           
                   <button type="submit" class="btn">Actualizar</button>
 
+                  {% if form.errors %}
+                            <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+                            <script src="/static/scripts/sweetAlert.js"></script>
+                            <div class="alertE" role="alert">
+                            <img id="alet" src="/static/assets/alert.png"><h4 id="mensajeE">{% for i in form.errors %} {{i}} {% endfor %}</h4> 
+                          </div>
+                  {% endif %}
+
                 </form>
               </div>
               <div class="imagen-content">
